[TASK] - Fix swagger documentation
